Tue Jun 18 20:47:30 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>
	* post.in: more fixup

	* post.in: fix up subdir recursion and makefile remaking somewhat;
		still needs work

Thu Jun 13 23:02:23 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* post.in,pre.in: break some things out from aclocal.m4 and put
		them here

Wed Jun 12 20:19:49 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* windows.in (PAGESIZE): New variable which is used to control the
		/pagesize parameter for Windows 16.  (Obviously we're
		suffering from library size bloat if we need to set this.)

Wed Jun 12 15:31:19 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* config.guess: Updated to a more recent version (from autoconf 1.10).

Mon Jun 10 17:18:34 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* windows.in (CCOPTS): Windows-32 CCOPTS
	
	* win-post.in: Use a Windows-32 specific LIB command line syntax

Thu Jun  6 15:54:57 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* windows.in (LIBCMD): Add the option /PAGESIZE:128 to the library
		command, since the krb5 library has gotten so big.

Tue Mar 12 19:40:59 1996  Ken Raeburn  <raeburn@cygnus.com>

	* pre.in (SRCTOP, BUILDTOP): Don't define.

Mon Oct 16 15:19:42 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* pre.in: KRB5_LIBDIR, ADMIN_BINDIR, KRB5_SHLIBDIR, KRB5_INCDIR
		are all based on exec_prefix.

Wed Oct 11 18:13:30 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* pre.in (DO_MAKE_SHLIB):  substitute VEXT, for the version extension for shared libs

Tue Oct 10 21:42:14 1995  Theodore Y. Ts'o  <tytso@dcl>

	* win-post.in: New file

	* windows.in: Moved .c -> .obj rule to win-post.in, since we need
		it after the LIBNAME makefile variable is defined in the
		main body of the Makefile.

Wed Sep 27 00:51:51 1995  Theodore Y. Ts'o  <tytso@dcl>

	* winexclude.sed: New file, used for generating DOS zip files.

Mon Sep 25 13:09:17 1995  Theodore Y. Ts'o  <tytso@dcl>

	* windows.in:
	* mac-pre.in: