@@ -25,6 +25,7 @@ U=../
 
 SUBDIRS = @subdirs@
 srcdir = @srcdir@
+top_srcdir=@top_srcdir@
 VPATH = @srcdir@
 
 CPPFLAGS = @CPPFLAGS@
